--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.13.7"
   },
+  "devDependencies": {
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
