--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
   },
+  "engines": {
+    "node": "14.20.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
