Added deployment scripts

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix frontend",
     "clientinstall": "npm install --prefix client",
-    "dev": "node server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
