Added deployment scripts

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "client": "npm start --prefix frontend",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "render-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
